--- a/WpfApp1/View/MainView.xaml
+++ b/WpfApp1/View/MainView.xaml
@@ -62,6 +62,11 @@
                     Content="Generate Phrase"
                     Style="{StaticResource MaterialDesignFlatButton}"
                     Command="{Binding Generate}"/>
+                <TextBlock
+                    Margin="10 15 0 0"
+                    Style="{StaticResource MaterialDesignBody1TextBlock}"
+                    Text="{Binding GPhrase}"
+                    />
             </StackPanel>
         </StackPanel>
     </Grid>
