--- a/WpfApp1/View/MainView.xaml
+++ b/WpfApp1/View/MainView.xaml
@@ -57,7 +57,10 @@
                            Foreground="{DynamicResource AccentColorBrush}"
                            FontFamily="Bradley Hand ITC"
                            FontStyle="Italic">
-                    Kakayato Informatsiya
+                    Exorcizamus te, omnis immundus spiritus omnis satanica potestas, omnis incursio infernalis adversarii, omnis legio, omnis congregatio et secta diabolica.
+                    Ergo draco maledicte et omnis legio diabolica adjuramus te. cessa decipere humanas creaturas, eisque aeternae Perditionis venenum propinare.
+                    Vade, Satana, inventor et magister omnis fallaciae, hostis humanae salutis. Humiliare sub potenti manu dei, contremisce et effuge, invocato a nobis sancto et terribili nomine, quem inferi tremunt. Ab insidiis diaboli, libera nos, Domine.
+                    Ut Ecclesiam tuam secura tibi facias libertate servire te rogamus, audi nos.
                 </TextBlock>
             </controls:Flyout>
         </controls:FlyoutsControl>
